module/openapi-annotations-plugin/src/test/resources/net/jacobpeterson/jet/openapiannotationsplugin/testproject/fail/arraycontainsmorethanoneelement/src/main/java/Test.java
import net.jacobpeterson.jet.openapiannotations.OpenApi;
import net.jacobpeterson.jet.openapiannotations.OpenApiComponents;
import org.jspecify.annotations.NullMarked;

@NullMarked
@OpenApi(components = {@OpenApiComponents(), @OpenApiComponents()})
public final class Test {}
